added filter type of sale to order
